# gkv_pkv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.data/: PKVGKV.md  additional_contribution_rates_with_increase.csv  contribution_rates.csv  gkv.ipynb  gkv_contribution_rates.csv  methodology.md  pkv-entwicklung-vpi.csv  rentenanpassung-verbraucherpreisindex.csv
notebooks/: v1.ipynb
src/gkv/: streamlit_app.py
